# tg-cli

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  tg  tg_scrape.py
.githooks/: commit-msg
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: commands.md  contributing.md  index.md  install.md  multi-account.md  quickstart.md  safety.md  sdk.md
docs/superpowers/plans/: 2026-05-06-tg-agent-cli-phase-2.md  2026-05-06-tg-agent-cli.md  2026-05-07-tg-agent-cli-phase-3.md  2026-05-07-tg-agent-cli-phase-4.md  2026-05-07-tg-agent-cli-phase-6-1.md  2026-05-07-tg-agent-cli-phase-6-2.md  2026-05-07-tg-agent-cli-phase-6.md  2026-05-07-tg-agent-cli-roadmap.md  2026-05-08-tg-agent-cli-final-oss-plan.md  2026-05-08-tg-agent-cli-phase-8-polish.md  2026-05-08-tg-agent-cli-phase-9-destructive.md
tests/tgcli/: conftest.py  test_auth_me.py  test_cli_smoke.py  test_client.py  test_db.py  test_dispatch.py  test_env.py  test_idempotency.py  test_messages.py  test_min_msgs.py  test_output.py  test_phase12_media.py  test_phase13_admin.py  test_phase4_chats.py  test_phase4_messages_read.py  test_phase61_topics.py  test_phase62_folders.py  test_phase6_writes.py  test_phase8_accounts.py  test_phase8_backfill_caps.py  test_phase8_doctor.py  test_phase8_full.py  test_phase8_lockwait.py  test_phase8_paths.py  test_phase8_perms.py  test_phase8_rapid_send.py  test_phase8_readonly.py  test_phase9_block.py  test_phase9_delete_msg.py  test_phase9_leave_chat.py  test_phase9_sessions.py  test_phase9_typed_confirm.py  test_resolve.py  test_safety.py  test_sdk.py
tgcli/: __init__.py  __main__.py  accounts.py  client.py  db.py  dispatch.py  env.py  idempotency.py  output.py  resolve.py  safety.py  sdk.py  text.py
tgcli/commands/: _common.py  account.py  accounts.py  admin.py  auth.py  chats.py  contacts.py  doctor.py  events.py  media.py  messages.py  stats.py
