[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "tgctl"
description = "Agent-friendly Telegram CLI built on Telethon -- read, write, archive your Telegram from the terminal."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
  { name = "Kris", email = "b1rd33@users.noreply.github.com" },
]
keywords = ["telegram", "cli", "mtproto", "telethon", "telegram-client", "automation", "agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Chat",
  "Topic :: Utilities",
]
dependencies = [
  "telethon>=1.43,<2",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "ruff>=0.6",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[project.scripts]
tg = "tgcli.__main__:main"

[project.urls]
Homepage = "https://github.com/b1rd33/tg-cli"
Repository = "https://github.com/b1rd33/tg-cli"
Issues = "https://github.com/b1rd33/tg-cli/issues"
Changelog = "https://github.com/b1rd33/tg-cli/blob/main/CHANGELOG.md"
"Built on Telethon" = "https://github.com/LonamiWebs/Telethon"

[tool.hatch.version]
path = "tgcli/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["tgcli"]

[tool.hatch.build.targets.sdist]
include = [
  "tgcli/",
  "AGENTS.md",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "pyproject.toml",
]
exclude = [
  "accounts/",
  "media/",
  ".venv/",
  "tests/",
  "docs/",
  ".env*",
  "*.session*",
  "audit.log",
  "telegram.sqlite*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402", "E702", "F401", "I001", "RUF012", "RUF015", "UP017"]
"tgcli/__main__.py" = ["E402"]
"tgcli/commands/account.py" = ["I001"]
"tgcli/commands/auth.py" = ["B905", "UP017"]
"tgcli/commands/chats.py" = ["F811", "F821", "I001", "UP038"]
"tgcli/commands/contacts.py" = ["I001", "UP017"]
"tgcli/commands/messages.py" = ["F401", "I001", "UP017"]
"tgcli/dispatch.py" = ["B010", "UP035", "UP038"]
"tgcli/idempotency.py" = ["UP017"]
"tgcli/output.py" = ["UP035"]
"tgcli/safety.py" = ["UP017"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
